# colophon

./: .gitignore  CLAUDE.md  README.md  colophon.py  competence_gate.py  incipit.py  marginalia.py  openlm.py  pyproject.toml  test_colophon.py  test_dialogue.py  test_elements.py  test_incipit.py  test_kana.py  test_marginalia.py
.claude/plans/: elements-teaching-corpus.md  kana-teaching-corpus.md
.github/workflows/: ci.yml
incipit/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
incipit/src/: App.tsx  acts.ts  api.ts  styles.css  tapeUtils.test.ts  tapeUtils.ts  types.ts
sample_data/: ClosedExample.yaml  OpenExample.yaml  PartialExample.yaml
teaching_data/: build_dialogue.py  build_elements.py  build_kana.py
teaching_data/dialogue/: 001-hydrogen.txt  002-helium.txt  003-lithium.txt  004-beryllium.txt  005-boron.txt  006-carbon.txt  007-nitrogen.txt  008-oxygen.txt  009-fluorine.txt  010-neon.txt  011-sodium.txt  012-magnesium.txt  013-aluminium.txt  014-silicon.txt  015-phosphorus.txt  016-sulfur.txt  017-chlorine.txt  018-argon.txt  019-potassium.txt  020-calcium.txt  021-scandium.txt  022-titanium.txt  023-vanadium.txt  024-chromium.txt  025-manganese.txt  026-iron.txt  027-cobalt.txt  028-nickel.txt  029-copper.txt  030-zinc.txt  031-gallium.txt  032-germanium.txt  033-arsenic.txt  034-selenium.txt  035-bromine.txt  036-krypton.txt  037-rubidium.txt  038-strontium.txt  039-yttrium.txt  040-zirconium.txt  (+78 more)
teaching_data/elements/: 001-hydrogen.yaml  002-helium.yaml  003-lithium.yaml  004-beryllium.yaml  005-boron.yaml  (+113 more)
(+82 files in other folders)
